@@ -38,7 +38,7 @@ records.}
 should be done; defaults to \code{TRUE}. No correction is done if
 \code{simulate.p.value = TRUE} or \code{distribution = "poisson-binomial"}.}
 
-\item{method}{(If \code{distribution = "poisson-binomial"}) A character 
+\item{method}{(If \code{distribution = "poisson-binomial"}.) A character 
 string that indicates the method by which the cdf
 of the Poisson binomial distribution is calculated and therefore the 
 p-value. \code{"mixed"} is the preferred (and default) method, it is a 
@@ -56,7 +56,7 @@ number of replicates used in the Monte Carlo estimation.}
 \value{
 A \code{"htest"} object with elements:
   \item{statistic}{Value of the test statistic.}
-  \item{parameter}{(If \code{distribution = "t"}) Degrees of freedom of
+  \item{parameter}{(If \code{distribution = "t"}.) Degrees of freedom of
     the \eqn{t} statistic (equal to \eqn{M-1}).}
   \item{p.value}{P-value.}
   \item{alternative}{The alternative hypothesis.}
@@ -72,9 +72,9 @@ Performs tests based on the (weighted) number of records,
 }
 \details{
 The null hypothesis is that the data come from a population with 
-  independent and identically distributed realizations. The one-sided
-  alternative hypothesis is that the (weighted) number of records is 
-  greater (or less) than under the null hypothesis. The 
+  continuous independent and identically distributed realizations. The 
+  one-sided alternative hypothesis is that the (weighted) number of records
+  is greater (or less) than under the null hypothesis. The 
   (weighted)-number-of-records statistic is calculated according to:
   \deqn{N_{..}^\omega = \sum_{m=1}^M \sum_{t=1}^T \omega_t I_{tm},} 
   where \eqn{\omega_t} are weights given to the different records
@@ -120,15 +120,16 @@ N.test(series_rev(ZaragozaSeries), record = "lower")
 # Exact test
 N.test(ZaragozaSeries, distribution = "poisson-binom")
 # Exact test for records in the last decade
-N.test(ZaragozaSeries, weights = function(t) ifelse(t < 56, 0, 1), distribution = "poisson-binom")
-# Linear weights for a more powerful test (with continuity correction)
-N.test(ZaragozaSeries, weights = function(t) t-1, correct = TRUE)
+N.test(ZaragozaSeries, weights = function(t) ifelse(t < 61, 0, 1), distribution = "poisson-binom")
+# Linear weights for a more powerful test (without continuity correction)
+N.test(ZaragozaSeries, weights = function(t) t-1, correct = FALSE)
 
 }
 \references{
-Butler K, Stephens MA (2016).
+Butler K, Stephens MA (2017).
 “The Distribution of a Sum of Independent Binomial Random Variables.”
 \emph{Methodology and Computing in Applied Probability}, \strong{19}(2), 557-571.
+\doi{10.1007/s11009-016-9533-4}
 
 Cebrián A, Castillo-Mateo J and Asín J (2021).
 “Record Tests to detect non stationarity in the tails with an application to climate change.”
@@ -137,6 +138,7 @@ Available at Research Square \doi{10.21203/rs.3.rs-214787/v1}
 Hong Y (2013). 
 “On Computing the Distribution Function for the Poisson Binomial Distribution.”
 \emph{Computational Statistics & Data Analysis}, \strong{59}(1), 41-51.
+\doi{10.1016/j.csda.2012.10.006}
 }
 \seealso{
 \code{\link{N.record}}, \code{\link{N.plot}}, 
